# dbml-draw

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  ir.rs  main.rs  parser.rs
src/editor/: assets.rs  ipc.rs  mod.rs  webview.rs
src/editor/assets/: editor.css  editor.html  editor.js
src/layout/: auto_layout.rs  layout_file.rs  mod.rs  types.rs
src/render/: marker.rs  mod.rs  relationship.rs  style.rs  table.rs
tests/fixtures/: basic.dbml
