[package]
name = "dbml-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
dbml-rs = "1.0.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
wry = "0.49"
tao = "0.33"

[dev-dependencies]
tempfile = "3"
